# source-engine-interfaces-book

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: IFacesBook.hpp  SE_SDK.hpp  utils.hpp
include/source-engine-interfaces-book/: IFacesBook.hpp  SourceEngineInterfacesBook.hpp
source/: IFacesBook.cpp  interfaces.hpp  source_engine_sdk.hpp  utils.cpp
source/utils/: CMakeLists.txt  linux.cpp  windows.cpp
source/utils/include/utils/: utils.hpp
src/: SourceEngineInterfacesBook.cpp  interfaces.hpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: source-engine-interfaces-utils.hpp
src/utils/src/unix/: source-engine-interfaces-utils.cpp
src/utils/src/windows/: source-engine-interfaces-utils.cpp
